Include power losses calculation

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ Projeto_classes_chaves/
 Simulacao antiga/
 *teste.c
 indutores/
+perdas/*.mat
+perdas/BESS_bench_dc_dc_parallel_efficiency_calculation.plecs.autosave
+perdas/__pycache__/
+perdas/venv/
+
